--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 
             
             <div class="imgContainer">
-                <img class="formImage" src="images/illustration-sign-up-desktop.svg">
-                <img class="formImageMobile" src="images/illustration-sign-up-mobile.svg"> 
+                <img class="formImage" src="./images/illustration-sign-up-desktop.svg">
+                <img class="formImageMobile" src="./images/illustration-sign-up-mobile.svg"> 
             </div>
         </div>
 
@@ -47,7 +47,7 @@
         <div class="successMessageContainer">
                 <div class="successMessageText">
                     <div class="checkIcon">
-                        <img class="successIcon" src="images/icon-success.svg">
+                        <img class="successIcon" src="./images/icon-success.svg">
                     </div>
                     <p class="title">Thanks for subscribing!</p>
                     <p class="description">A confirmation email has been sent to <span class="userEmail"></span>. Please open
