--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">    
     
         <title>Newsletter Sign-up Form</title>
-        <link rel="stylesheet" type="text/css" href="/images/styles/main.css">
+        <link rel="stylesheet" type="text/css" href="./images/styles/main.css">
         <script src="index.js" defer></script>
     </head>
    
